# swarm-Agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md
swarm/: __init__.py  agent.py  config.py  llm.py  prompts.py
swarm/core/: __init__.py  blackboard.py  models.py  observer.py  storage.py
swarm/data/: mcp_servers.json
swarm/mcp/: __init__.py  client.py
swarm/skills/: __init__.py  base.py  hotloader.py  md_skill.py  registry.py
swarm/skills/builtin/: __init__.py  code_exec.py  task_ops.py
swarm/static/: index.html
tests/: __init__.py  test_config.py  test_hotloader.py  test_models.py  test_storage.py
