[project]
name = "swarm-agent"
version = "0.1.0"
description = "Decentralized Swarm Intelligence Agent Matrix - a self-organizing multi-agent system based on blackboard architecture"
authors = [
    {name = "zhaoJinPeng", email = "774461674@qq.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["agent", "multi-agent", "swarm", "llm", "mcp", "blackboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "python-dotenv",
    "fastapi (>=0.115.0)",
    "uvicorn (>=0.34.0)",
    "openai (>=1.0.0)",
    "sqlalchemy (>=2.0.0)",
]

[project.optional-dependencies]
mcp = ["mcp (>=1.0.0)"]
mysql = ["pymysql (>=1.1.0)"]
pgsql = ["psycopg2-binary (>=2.9.0)"]
all-db = ["pymysql (>=1.1.0)", "psycopg2-binary (>=2.9.0)"]
hotloader = ["watchdog (>=3.0.0)"]
dev = [
    "pytest (>=8.0)",
    "pytest-asyncio (>=0.23)",
    "ruff (>=0.4)",
]

[project.urls]
Homepage = "https://github.com/manman-zjp/swarm-Agent"
Repository = "https://github.com/manman-zjp/swarm-Agent"
Issues = "https://github.com/manman-zjp/swarm-Agent/issues"
Changelog = "https://github.com/manman-zjp/swarm-Agent/blob/master/CHANGELOG.md"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["swarm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
